--- a/packages/connextion-postgres/package.json
+++ b/packages/connextion-postgres/package.json
@@ -32,10 +32,11 @@
   },
   "devDependencies": {
     "@nestjs-kitchen/connextion": "workspace:*",
-    "@nestjs/common": "^10.4.12",
-    "@nestjs/testing": "^10.4.12",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/testing": "^10.4.15",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.10.5",
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
@@ -63,7 +64,7 @@
   ],
   "peerDependencies": {
     "@nestjs-kitchen/connextion": "workspace:*",
-    "@nestjs/common": "^10.4.12",
+    "@nestjs/common": "^10.4.15",
     "@types/pg": "^8.11.10",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.1"
