--- a/packages/authz/package.json
+++ b/packages/authz/package.json
@@ -38,22 +38,16 @@
     "uid": "^2.0.2"
   },
   "devDependencies": {
-    "@nestjs/common": "^10.4.12",
-    "@nestjs/core": "^10.4.12",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/testing": "^10.4.12",
+    "@nestjs/testing": "^10.4.15",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.10.5",
     "@types/passport": "^1.0.17",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
-    "passport": "^0.7.0",
-    "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
@@ -75,9 +69,10 @@
     "Session"
   ],
   "peerDependencies": {
-    "@nestjs/common": "^10.4.12",
-    "@nestjs/core": "^10.4.12",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/core": "^10.4.15",
     "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.4.15",
     "passport": "^0.7.0",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
